--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,28 @@
     %link{rel: "stylesheet", href: "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"}
     = javascript_importmap_tags
   %body
-    = yield
-  %script{type: "text/javascript", src: "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"}
+    .navbar
+      .container-fluid
+        .navbar-brand
+          %a{href: "#"} Questions!
+          %button.navbar-toggler
+            %span.navbar-toggler-icon
+          .collapse.navbar-collapse#navbarNav
+            %ul.navbar-nav
+              - if signed_in?
+                %li.nav-item Signed in as #{current_user.email}
+                %li.nav-item= button_to 'Sign out', sign_out_path, method: :delete
+              - else
+                %li.nav-item= button_to 'Sign in', sign_in_path
+
+    .container
+      .row
+        .col
+          #flash
+            - flash.each do |key, value|
+              %div{class: bootstrap_flash_class(key)}= value
+
+      = yield
+
+    %script{type: "text/javascript", src: "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"}
 
