Update nav link

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     .navbar
       .container-fluid
         .navbar-brand
-          %a{href: "#"} Questions!
+          %a{href: "/"} Questions!
         %ul.navbar-nav
           - if signed_in?
             %li.nav-item
