Begin Answering CRUD work
This is incomplete still--the idea is to have the form to create answers
visible on the questions#show view.

However, this is causing some issues for rendering errors with invalid
submissions. Very likely solvable (either by changing approach, or
finding the right values to pass along with the redirect).

Additionally, some of the default controller actions and views for
Answer need to be removed still.

Stopping here because I'm approaching 2 hours and at the very least the
relationships are set.

--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -1,15 +1,35 @@
-%p#notice= notice
+.row
+  .col
+    %p#notice= notice
 
-%p
-  %b User:
-  = @question.user
-%p
-  %b Title:
-  = @question.title
-%p
-  %b Body:
-  = @question.body
+    %p
+      %b Asked by:
+      = @question.user_email
+    %p
+      %b Title:
+      = @question.title
+    %p
+      %b Body:
+      = @question.body
 
-= link_to 'Edit', edit_question_path(@question)
-\|
-= link_to 'Back', questions_path
+    = link_to 'Edit', edit_question_path(@question)
+    \|
+    = link_to 'Back', questions_path
+
+%br
+
+- if @question.has_answers?
+  .row
+    .col
+      %h3 Answers so far
+      - @question.answers.each do |answer|
+        .answer
+          %p= answer.body
+          %aside.answered-by Answered by #{answer.answerer_email} on #{answer.created_at.iso8601}
+
+%br
+
+.row
+  .col
+    %h3 Answer this question:
+    = render partial: 'answers/form', locals: { answer: Answer.new, question: @question }
